<resources>
    <string name="app_name">TMC Course Finder</string>
    <string name="navigation_course">Courses</string>
    <string name="navigation_favorite">Favorites</string>
    <string name="navigation_about">About us</string>
    <string name="navigation_contact">Contact us</string>
    <string name="toolbar_main_course">TMC Course Finder</string>
    <string name="toolbar_main_favorite">Favorite Courses</string>
    <string name="toolbar_main_about">About us</string>
    <string name="toolbar_main_contact">Contact us</string>
    <string name="toolbar_favorite">Saved favorite courses</string>
    <string name="toolbar_course_discipline">Course by Discipline</string>
    <string name="toolbar_course_institution">Course by Institution</string>
    <string name="toolbar_course_detail">About the course</string>
    <string name="contact_hint_name">Full Name</string>
    <string name="contact_hint_email">Email</string>
    <string name="contact_hint_mobile">Mobile</string>
    <string name="contact_hint_inquiry">Your inquiry ?</string>
    <string name="contact_button">Mail to TMC</string>
    <string name="about_image_description">About TMC campus</string>
    <string name="course_image_description">Old TMC campus</string>
    <string name="about_link_history">http://www.tmc.edu.sg/about-us/our-history/</string>
    <string name="about_link_welcome">http://www.tmc.edu.sg/about-us/welcome-message/</string>
    <string name="about_link_vision">http://www.tmc.edu.sg/about-us/vision-mission-and-brand/</string>
    <string name="about_link_why">http://www.tmc.edu.sg/about-us/why-tmc-academy/</string>
    <string name="about_link_more">http://www.tmc.edu.sg/about-us/</string>
    <string name="about_button_history">Our History</string>
    <string name="about_button_welcome">Welcome Message</string>
    <string name="about_button_vision">Vision, Mission and Brand</string>
    <string name="about_button_why">Why choose TMC \?</string>
    <string name="about_button_more">More...</string>
    <string name="favorite_saved_course">Saved courses</string>
    <string name="course_label">SEARCH COURSES BY:</string>
    <string name="course_button_discipline">Discipline</string>
    <string name="course_button_institution">Institution</string>
    <string name="course_detail_button">Further detail</string>
    <string name="course_discipline_accounting">Accounting &amp; Finance</string>
    <string name="course_discipline_business">Business</string>
    <string name="course_discipline_hospitality">Hospitality &amp; Tourism</string>
    <string name="course_discipline_infocomm">Infocomm Technology</string>
    <string name="course_discipline_mass_comm">Mass Communication</string>
    <string name="course_discipline_psychology">Psychology</string>
    <string name="course_institution_tmc">TMC Academy</string>
    <string name="course_institution_northampton">University of Northampton - UK</string>
    <string name="course_institution_gloucestershire">University of Gloucestershire - UK</string>
    <string name="course_institution_greenwich">University of Greenwich - UK</string>
    <string name="course_name0">Diploma in Accounting and Finance</string>
    <string name="course_name1">Bachelor of Science (Honours) in Accounting and Finance</string>
    <string name="course_name2">Bachelor of Science (Honours) \n International Accounting (Top Up)</string>
    <string name="course_name3">Post-Graduate Diploma in Accounting \n – A Preparatory Course for UMKC Master of Science in Accounting (MSA)</string>
    <string name="course_name4">Post-Graduate Diploma in Finance \n – A Preparatory Course for UMKC Master of Science in Finance (MSF)</string>
    <string name="course_name5">Bachelor of Arts (Honours) in Accounting and Financial Management Studies (Top-up)</string>
    <string name="course_name6">Bachelor of Arts (Honours) \n Business and Management (Top-Up)</string>
    <string name="course_name7">Bachelor of Arts (Honours) \n Marketing Management (Top-Up)</string>
    <string name="course_name8">Bachelor of Arts (Honours) in \n Business Management and Strategy (Top-up)</string>
    <string name="course_name9">Bachelor of Arts (Honours) \n International Tourism Management (Top Up)</string>
    <string name="course_name10">Higher Diploma in Hospitality and Tourism Management</string>
    <string name="course_name11">Higher Diploma in Tourism, Hospitality and Leisure Management</string>
    <string name="course_name12">International Diploma in Hospitality</string>
    <string name="course_name13">Bachelor of Science (Honours) Computing (Top-up)</string>
    <string name="course_name14">Higher Diploma in Infocomm Technology</string>
    <string name="course_name15">International Diploma in Information Technology</string>
    <string name="course_name16">Higher Diploma in Mass Communication</string>
    <string name="course_name17">International Diploma in Mass Communication</string>
    <string name="course_name18">Bachelor of Science (Honours) \n Psychology with Counselling (Top-up)</string>
    <string name="course_name19">Bachelor of Science (Honours) Psychology (Top-Up)</string>
    <string name="course_name20">Graduate Diploma of Psychology</string>
    <string name="course_name21">Higher Diploma in Psychology with Counselling</string>
    <string name="course_detail0">
        The main aim is to provide the students with the necessary theoretical knowledge
        and the practical aspects to meet career opportunities in the accounting and financial sectors of the economy.
    </string>
    <string name="course_detail1">
        This accounting and finance degree is your step into the vast industry.

        \n\n Accountants and finance specialists have a central role in all types of organisations;
        public and private sector, within industry and commerce.
        The accountant has become a key player in the provision of management information to enable successful decision making,
        planning and control. Accounting is more than just a computational skill and the programme will
        develop your ability to analyse and to evaluate real life situations and effectively communicate your views and opinions.
        You will consider practical techniques involved in accounting and finance,
        and develop skills to critically analyse the theory behind these techniques.

        \n\n The Accounting and Finance Division is one of only six universities to have courses accredited by AAT
        (Association of Accounting Technicians). This means that once you graduate you will be able to apply for AAT membership,
        providing you with a professional qualification to enhance your employability.

        \n\n The Division has also retained its accreditations from ACCA
        (Association of Chartered Certified Accountants – 8 exemptions), CIMA (Chartered Institute of Management Accountants),
        ICAEW (Institute of Chartered Accountants in England and Wales) and AIA (Association of International Accountants).
    </string>
    <string name="course_detail2">
        &lt;Awarded by The University of Northampton&gt;

        \n\n The accounting degree awarded by The University of Northampton provides the learners the knowledge within
        which a financial services institution or finance function operates and the financial boundaries to
        which any business operates. In addition the learner will develop a sound critical understanding of the academic foundations,
        which underpin key aspects of accounting and financial management.
        It provides a framework for developing accounting as well as business skills and knowledge needed at all management levels.
        This course is designed for students seeking careers in accounting and financial industry.
    </string>
    <string name="course_detail3">
        This programme is designed for students with little or no undergraduate accounting coursework.
        It provides comprehensive coverage of accounting topics necessary for a professional career in the field.
        Completion of the programme also qualifies students for the various examinations leading to professional certification.
    </string>
    <string name="course_detail4">
        The Post-Graduate Diploma in Finance (PGDF) is for students and executives seeking specialized training
        in finance in preparation for Master of Science in Finance at University of Missouri –
        Kansas City and the financial certifications such as the Chartered Financial Analyst (CFA),
        and Certified Financial Planner (CFP).
    </string>
    <string name="course_detail5">
        &lt;Awarded by University of Gloucestershire&gt;

        \n\n This degree offers graduates the opportunity to either fast-track their professional accountancy qualification
        or to embark on a career in business. The programme gives graduates a firm foundation for a career in accounting/finance,
        which enables them to make an immediate and effective contribution to the organisation for which they work.
    </string>
    <string name="course_detail6">
        &lt;Awarded by The University of Northampton&gt;

        \n\n The business degree awarded by The University of Northampton covers key aspects of business and management practice
        and theory and emphasizes the development of individual and group skills.
        Students can follow a range of pathways to meet their individual interests and career aspirations including marketing,
        finance, human resources and general business.This course is designed for students seeking careers in
        marketing and business industries.

        \n\n Course aims to:

        \n\t &#8226; Become increasingly independent in their learning style, thereby enhancing their life-long learning skills.
        \n\t &#8226; Gain a deep understanding of organisations,their management and the changing external environment
        \n\t &#8226; Be able to contribute effectively in a range of operational and/or strategic contexts in business on completion of the programme and to target careers in one specialist area
        \n\t &#8226; Develop both the knowledge and the ability to use a range of research techniques.
    </string>
    <string name="course_detail14">
        The Higher Diploma in Infocomm Technology (HDICT) provides students with the necessary theoretical knowledge and practical skills to
        meet excellent career opportunities in the Infocomm Technology (ICT) industry.
        It aims to develop and produce graduates who are well-versed in the critical disciplines required in the field of computing and IT.
        They will possess the necessary personal qualities and technical skills to excel as IT professionals.

        \n\n The course aims to achieve an international standard of high quality training which will lead to a universally recognised qualification,
        enabling graduates to pursue undergraduate programmes at top universities.

        \n\n The objectives of the Higher Diploma in Infocomm Technology are to:

        \n\t &#8226; design and implement high quality and robust software products
        \n\t &#8226; professionally analyse and design information systems
        \n\t &#8226; understand, evaluate, propose and implement computerised solutions to meet varied levels of user requirements
        \n\t &#8226; demonstrate effective inter-personal skills when working in groups or leading teams
        \n\t &#8226; professionally communicate and present proposals, findings and results
        \n\t &#8226; pursue higher level studies at universities
    </string>
</resources>