<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_course"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_course"
        android:title="@string/navigation_course"
        android:visible="false" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_navigation_favorite"
        android:title="@string/navigation_favorite" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_navigation_about"
        android:title="@string/navigation_about" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_navigation_contact"
        android:title="@string/navigation_contact" />
</menu>
