<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/about_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/about_image_description"
            app:srcCompat="@drawable/tmc_campus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorAccent"
                android:text="@string/about_button_history"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorAccent"
                android:text="@string/about_button_welcome"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorAccent"
                android:text="@string/about_button_vision"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorAccent"
                android:text="@string/about_button_why"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorAccent"
                android:text="@string/about_button_more"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>