<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/course_image_description"
        app:srcCompat="@drawable/tmc_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/course_label"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/menu"
        android:elevation="4dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/course_button_discipline"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="90dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/menu"
        android:elevation="4dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/course_button_institution"
        android:textSize="18sp" />
</LinearLayout>